GH-967 - Polishing.